// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Instrument Display components InfoItem matches snapshot 1`] = `
<div>
  <li
    class="MuiListItem-root MuiListItem-gutters"
  >
    <div
      class="MuiListItemText-root MuiListItemText-multiline"
    >
      <span
        class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextSecondary MuiListItemText-primary"
      >
        test title
      </span>
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextPrimary MuiListItemText-secondary"
      >
        title
      </h6>
    </div>
  </li>
</div>
`;

exports[`Instrument Display components InstrumentDisplay matches snapshot 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container"
  >
    <div
      class="makeStyles-heading-106"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 MuiTypography-colorInherit"
      >
        Violin 1-808
      </h5>
    </div>
  </div>
  <ul
    class="MuiList-root"
  >
    <ul
      class="MuiList-root"
    >
      <li
        class="MuiListItem-root MuiListItem-gutters"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline"
        >
          <span
            class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextSecondary MuiListItemText-primary"
          >
            Assigned To
          </span>
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextPrimary MuiListItemText-secondary"
          >
            Some Name
          </h6>
        </div>
      </li>
      <li
        class="MuiListItem-root MuiListItem-gutters"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline"
        >
          <span
            class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextSecondary MuiListItemText-primary"
          >
            Condition
          </span>
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextPrimary MuiListItemText-secondary"
          >
            ★★★★★
          </h6>
        </div>
      </li>
      <li
        class="MuiListItem-root MuiListItem-gutters"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline"
        >
          <span
            class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextSecondary MuiListItemText-primary"
          >
            Condition Notes
          </span>
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextPrimary MuiListItemText-secondary"
          >
            testconditionnotes
          </h6>
        </div>
      </li>
      <li
        class="MuiListItem-root MuiListItem-gutters"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline"
        >
          <span
            class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextSecondary MuiListItemText-primary"
          >
            Gifted To Student
          </span>
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextPrimary MuiListItemText-secondary"
          >
            Yes
          </h6>
        </div>
      </li>
      <li
        class="MuiListItem-root MuiListItem-gutters"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline"
        >
          <span
            class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextSecondary MuiListItemText-primary"
          >
            Instrument Location
          </span>
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextPrimary MuiListItemText-secondary"
          >
            Office
          </h6>
        </div>
      </li>
      <li
        class="MuiListItem-root MuiListItem-gutters"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline"
        >
          <span
            class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextSecondary MuiListItemText-primary"
          >
            Maintenance Notes
          </span>
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextPrimary MuiListItemText-secondary"
          >
            testmaintenancenotes
          </h6>
        </div>
      </li>
      <li
        class="MuiListItem-root MuiListItem-gutters"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline"
        >
          <span
            class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextSecondary MuiListItemText-primary"
          >
            Quality
          </span>
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextPrimary MuiListItemText-secondary"
          >
            ★★★
          </h6>
        </div>
      </li>
      <li
        class="MuiListItem-root MuiListItem-gutters"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline"
        >
          <span
            class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextSecondary MuiListItemText-primary"
          >
            Instrument Size
          </span>
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextPrimary MuiListItemText-secondary"
          >
            4/4
          </h6>
        </div>
      </li>
    </ul>
  </ul>
</div>
`;

exports[`Instrument Display components InstrumentDisplayFields matches snapshot 1`] = `
<div>
  <ul
    class="MuiList-root"
  >
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root MuiListItemText-multiline"
      >
        <span
          class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextSecondary MuiListItemText-primary"
        >
          Assigned To
        </span>
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextPrimary MuiListItemText-secondary"
        >
          Some Name
        </h6>
      </div>
    </li>
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root MuiListItemText-multiline"
      >
        <span
          class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextSecondary MuiListItemText-primary"
        >
          Condition
        </span>
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextPrimary MuiListItemText-secondary"
        >
          ★★★★★
        </h6>
      </div>
    </li>
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root MuiListItemText-multiline"
      >
        <span
          class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextSecondary MuiListItemText-primary"
        >
          Condition Notes
        </span>
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextPrimary MuiListItemText-secondary"
        >
          testconditionnotes
        </h6>
      </div>
    </li>
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root MuiListItemText-multiline"
      >
        <span
          class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextSecondary MuiListItemText-primary"
        >
          Gifted To Student
        </span>
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextPrimary MuiListItemText-secondary"
        >
          Yes
        </h6>
      </div>
    </li>
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root MuiListItemText-multiline"
      >
        <span
          class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextSecondary MuiListItemText-primary"
        >
          Instrument Location
        </span>
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextPrimary MuiListItemText-secondary"
        >
          Office
        </h6>
      </div>
    </li>
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root MuiListItemText-multiline"
      >
        <span
          class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextSecondary MuiListItemText-primary"
        >
          Maintenance Notes
        </span>
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextPrimary MuiListItemText-secondary"
        >
          testmaintenancenotes
        </h6>
      </div>
    </li>
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root MuiListItemText-multiline"
      >
        <span
          class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextSecondary MuiListItemText-primary"
        >
          Instrument Number
        </span>
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextPrimary MuiListItemText-secondary"
        >
          1-808
        </h6>
      </div>
    </li>
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root MuiListItemText-multiline"
      >
        <span
          class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextSecondary MuiListItemText-primary"
        >
          Quality
        </span>
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextPrimary MuiListItemText-secondary"
        >
          ★★★
        </h6>
      </div>
    </li>
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root MuiListItemText-multiline"
      >
        <span
          class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextSecondary MuiListItemText-primary"
        >
          Instrument Size
        </span>
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextPrimary MuiListItemText-secondary"
        >
          4/4
        </h6>
      </div>
    </li>
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root MuiListItemText-multiline"
      >
        <span
          class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextSecondary MuiListItemText-primary"
        >
          Instrument Type
        </span>
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextPrimary MuiListItemText-secondary"
        >
          Violin
        </h6>
      </div>
    </li>
  </ul>
</div>
`;
